--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "author": "Edward Garrett",
   "license": "ISC",
   "dependencies": {
+    "@esri/arcgis-rest-auth": "^3.2.1",
+    "@esri/arcgis-rest-request": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "cross-fetch": "^3.1.4",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
+    "isomorphic-form-data": "^2.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.11",
     "osmosis": "^1.1.10",
